<resources>
    <string name="app_name">Skieg</string>
    <string name="events_button">Events</string>
    <string name="planner_button">Planning</string>
    <string name="calendar_button">Calendar</string>
    <string name="personal_profile_button">Profile</string>
    <string name="post_button">Create New Post</string>
    <string name="budget_button">Budget</string>
    <string name="checklist_button">Checklist</string>
    <string name="itinerary_button">Itinerary</string>
    <string name="journal_button">Journal</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_button">Maps</string>

    <string name="back_button">Back</string>

    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="day7">Day 7</string>
    <string name="calendar">Calendar</string>

    <string name="login">Login</string>
    <string name="signup">Signup</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="create_event">Create Event</string>
    <string name="calendar_events">Calendar Events</string>
    <string name="create_calendar_event">Create Calendar Event</string>
    <string name="view_calendar_event">View Events</string>

    <string name="event1">Event 1</string>
    <string name="event2">Event 2</string>
    <string name="event3">Event 3</string>
    <string name="events">Events</string>

    <string-array name="eventsString">
        <item>Concert event</item>
        <item>Tour event</item>
        <item>Festival event</item>
        <item>Meet up event</item>
        <item>Another festival event</item>
    </string-array>

    <string-array name="countriesList">
        <item>Choose Country</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
    </string-array>



    <string name="checklist">Checklist</string>
    <string name="add_checklist_item">Add a checklist item</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>

    <string name="budget">Budget</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="add_item_budget">Add item to your budget</string>

    <string-array name="postTest">
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
        <item>Post one</item>
        <item>Post Two</item>
        <item>Post Three</item>
        <item>Post Four</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Firebase" />
    <string name="username2">username</string>
    <string name="enter_your_username">enterUserName</string>
    <string name="password2">password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="delete">"delete "</string>
</resources>