<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:id="@+id/plannerBudgetButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/budget_button"
        android:onClick="clickPlannerBudgetButton"/>

    <Button
        android:id="@+id/plannerChecklistButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/checklist_button"
        android:onClick="clickPlannerChecklistButton"/>

    <Button
        android:id="@+id/plannerItineraryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/itinerary_button"
        android:onClick="clickPlannerItineraryButton"/>

    <Button
        android:id="@+id/plannerJournalButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/journal_button"
        android:onClick="clickPlannerJournalButton"/>


</LinearLayout>