<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlue"
    android:weightSum="100"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="25"
        android:gravity="center">

        <TextView
            android:id="@+id/createCalendarHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_calendar_event"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="75"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="100"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="#757575"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="text"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/location"
            android:inputType="text"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/date"
            android:inputType="date"
            android:textColorHint="#757575" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/createEventBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:layout_weight="50"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/back_button"
            android:layout_marginRight="10sp"
            android:onClick="backBtnClicked"/>

    </LinearLayout>

</LinearLayout>